--- a/reactchess.client/package.json
+++ b/reactchess.client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "^20.13.1",
