--- a/ReactChess.Server/Properties/launchSettings.json
+++ b/ReactChess.Server/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7164;http://localhost:5191",
       "environmentVariables": {
