--- a/.gitignore
+++ b/.gitignore
@@ -486,3 +486,7 @@ $RECYCLE.BIN/
 # Visual code files
 /.vscode
 
+chess-sqlite.session.sql
+ReactChess.Server/localChess.db
+ReactChess.Server/localChess.db-shm
+ReactChess.Server/localChess.db-wal
