--- a/.gitignore
+++ b/.gitignore
@@ -490,3 +490,4 @@ chess-sqlite.session.sql
 ReactChess.Server/localChess.db
 ReactChess.Server/localChess.db-shm
 ReactChess.Server/localChess.db-wal
+qodana.yaml
